--- a/src/App.css
+++ b/src/App.css
@@ -2,24 +2,14 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
+.App-background {
   background-color: #282c34;
-  min-height: 100vh;
+  height: 100vh;
+  width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -32,7 +22,61 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+h1 {
+  color: #FFFFFF;
+  text-align: center;
+}
+
+h2 {
+  color: #FFFFFF;
+  margin: 0;
+}
+
+h5 {
+  margin: 0;
+}
+
+.click-button {
+  margin-left: 20px;
+  height: 50px;
+  align-self: center;
+  border-radius: 5px;
+}
+
+.inputfield {
+  font-size: inherit;
+  border-radius: 5px;
+  height: 50px;
+  width: 80vw;
+}
+
+.repo-box {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  padding-top: 10px;
+  padding-left: 10px;
+  padding-bottom: 10px;
+  border-radius: 10px;
+  background-color: rgb(211, 186, 111);
+  width: auto;
+  height: 150px;
+  margin-bottom: 5px;
+}
+
+.search-result {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  flex-direction: row;
+  width: 80vw;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  line-height: 60px;
 }
